[package]
name = "gochikika-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
ndarray = "0.15.6"
plotters = { version = "0.3.4", features = ["datetime"] }
polars = { version = "0.35.0", features = ["lazy", "csv", "describe", "moment", "mode", "ndarray", "cov"] }
